--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h2>Câu 1: Bài tập về list</h2>
-    <a><b>Code lại một trang giống trang này</b>: <a href="https://khoa-hoc-front-end.vercel.app/lessons/lesson-5/ul.html">Bài tập về list</a></a>
+    <a><b>Code lại một trang giống trang này</b>: <a href="./bt_list.html">Bài tập về list</a></a>
     <h2>Câu 2: Bài tập về table</h2>
-    <a><b>Code lại một trang giống trang này</b>: <a href="https://khoa-hoc-front-end.vercel.app/lessons/lesson-5/table.html">Bài tập về table</a></a>
+    <a><b>Code lại một trang giống trang này</b>: <a href="./bt_table.html">Bài tập về table</a></a>
     <h2>Câu 3: Bài tập về position và z-index</h2>
-    <a><b>Code lại một trang giống trang này</b>: <a href="https://khoa-hoc-front-end.vercel.app/lessons/lesson-5/position.html">Bài tập về position và z-index</a></a>
+    <a><b>Code lại một trang giống trang này</b>: <a href="./bt_position.html">Bài tập về position và z-index</a></a>
 </body>
+
 </html>
